...
        <IconButton
          size={40}
          name="cart-plus"
          buttonStyles={styles.addToCart}
          disabled={quantity === 0}
          onPress={handleAddToCart}
          accessibilityLabel="Add to cart"
        />
      </View>
    </View>
  ) : null;
};

...
